--- a/src/tdc/QABundle/Resources/public/css/qa.css
+++ b/src/tdc/QABundle/Resources/public/css/qa.css
@@ -1,10 +1,24 @@
-.questionSummary {
+.questionSummary,
+.questionArea .questionTitle {
     border-bottom:1px dotted rgb(194,194,194);
     padding:10px;
 }
-.question {
+.questionTitle, .answerTitle {
+    color:rgb(228, 188, 68);
+}
+.questionArea {
+    width:730px;
+}
+.questionText, .answerText {
+    margin:15px;
+}
+.questionTitle, .answerTitle {
     font-size:1.6em;
 }
+.questionEnd {
+    clear:both;
+}
+
 .author, .updated, .views, .answers {
     font-size:0.85em;
 }
@@ -12,12 +26,13 @@
     float:left;
     margin-right:30px;
 }
-.questionArea {
-    width:650px;
-}
 .tags {
     margin:5px 0px;
     padding:4px 0px;
+    clear:both;
+}
+.questionArea .tags {
+    padding-top:10px;
 }
 .tags .tag {
     font-size:0.85em;
@@ -25,4 +40,19 @@
     border-radius:5px;
     padding:4px 6px;
     box-shadow: 0px 1px 1px 0px rgb(40,40,40);
+    margin:2px 4px;
+}
+.tags .tag a {
+    color: rgb(220,220,220);
+}
+.questionArea .answerTitle {
+    border-top:1px dotted rgb(194,194,194);
+    padding:10px;
+}
+.answerArea {
+    margin-left:20px;
+}
+.answerTitle {
+    margin-top:20px;
+    font-style:italic;
 }
