--- a/src/tdc/QABundle/Resources/public/css/qa.css
+++ b/src/tdc/QABundle/Resources/public/css/qa.css
@@ -8,7 +8,16 @@
 }
 .questionArea {
     width:730px;
+    display:inline-block;
 }
+
+#sidebarArea {
+    float: right;
+    width:280px;
+    border: 1px solid white;
+    display:inline-block;
+}
+
 .questionText, .answerText {
     margin:15px;
 }
