--- a/src/tdc/FrontEndBundle/Resources/views/Default/index.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/index.html.twig
@@ -7,8 +7,8 @@
         <div id="iconHolder">
             <img src="{{ path('tdc_front_homepage') }}../public/images/tdcLogo.png"/>
         </div>
-        <h2><a href="{{ path('tdc_front_about')}}">About</a></h2>
         <h2><a href="{{ path('tdc_front_catalog_list')}}">Catalog</a></h2>
+        <h2><a href="{{ path('tdc_qa_homepage')}}">Q & A</a></h2>
         <h2><a href="{{ path('tdc_front_faq')}}">F.A.Q.</a></h2>
     </div>
     <div id="contentArea">
