--- a/src/tdc/QABundle/Resources/public/css/qa.css
+++ b/src/tdc/QABundle/Resources/public/css/qa.css
@@ -41,7 +41,8 @@
 .questionArea .tags {
     padding-top:10px;
 }
-span.tag {
+span.tag,
+span.addedTag {
     font-size:0.85em;
     background-color:rgb(50,100,200);
     border-radius:5px;
@@ -81,6 +82,12 @@ span.tag {
 #questionForm textarea {
     background-color:rgb(80,80,80);
     border-radius:10px;
+    border-width:0px;
+    border-width: 0px;
+    box-shadow: 0px 1px 0px rgb(194,194,194), 0px -1px 0px rgb(40,40,40);
+    padding: 0px 5px;
+    color: rgb(194,194,194);
+    font-size: 1.0em;
 }
 
 #questionForm input[type=text],
@@ -88,11 +95,36 @@ span.tag {
     width:500px;
     height:30px;
     line-height:30px;
+    outline:none;
 }
 #questionForm textarea {
     height:350px;
+    resize: none;
 }
+#questionForm .submitBtn {
+    width:585px;
+    text-align:right;
+    margin-top:5px;
+}
+#questionForm input[type=submit] {
+    padding:5px 10px;
+}
+#questionForm button {
+    border-width:0px;
+    font-size:0.9em;
+}
+#tagsField input[type=text] {
+    width:400px;
+}
+#tagsRow {
+    display:none;
+}
+#selectedTags {
+    padding:10px 0px;
+}
+.addedTag {
 
+}
 /***************
 *
 * Side Bar
